# sp_vision_25_gestalt_system_bridge

./: .gitignore  CMakeLists.txt  readme.md
configs/: gestalt.yaml  gestalt_d45.yaml  gestalt_d65.yaml  gestalt_d85.yaml  gestalt_f12.yaml  gestalt_f16.yaml  gestalt_f20.yaml  gestalt_f24.yaml  gestalt_far.yaml  gestalt_far15.yaml  gestalt_far_blue.yaml  gestalt_match_sentry.yaml  gestalt_observe.yaml  gestalt_outpost_rawpnp.yaml  gestalt_sentry_base_hero.yaml  gestalt_sentry_fortress_infantry.yaml  gestalt_sentry_outpost.yaml  gestalt_watch.yaml
docs/: ai-cookbook-command-guide.md
io/: socketcan.hpp
io/gestalt/: game_link.cpp  game_link.hpp  shared_frame_capture.cpp  shared_frame_capture.hpp  win_capture.cpp  win_capture.hpp
src/: gestalt.cpp
tasks/auto_aim/: CMakeLists.txt  aimer.cpp  armor.hpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp
tasks/auto_aim/yolos/: yolo11.cpp  yolo11.hpp
tools/: CMakeLists.txt  aim_solver.py  e1_report.py  e2_extaim_probe.py  game_window_capture.py  outpost_benchmark.py  outpost_calibrate.py  outpost_session.py  spvision_closed_loop.py  spvision_tracker.py  vino_detect.py
